--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -8,7 +8,7 @@
 据笔者所知，本课题是第一个针对仿冒应用进行大规模全面实证研究的课题。
 
 % To better understand the ecosystem nature of this type of apps, we obtained more than 150,000 data entries from real-world markets, observed and measured the fake samples among this dataset from several dimensions including certificate information, app size, app name and package name, time factor and so on.
-为了更好地了解这个类型的应用的生态环境，本文基于Python 3设计实现了仿冒应用收集框架\mytool，利用基于BFS的算法从现实世界中的各个应用市场中获取了超过15万个应用样本，并且从多个不同维度，对这个数据库里面的仿冒样本进行了观测和考察。
+为了更好地了解这个类型的应用的生态环境，本文基于Python 3设计实现了仿冒应用收集框架\mytool，利用基于BFS的算法收集了来自现实世界中各个应用市场的超过15万个应用样本，并且从多个不同维度，对这个数据库里面的仿冒样本进行了观测和考察。
 这些维度包括了APK包中的安全证书信息、应用大小、应用名、包名和时间因素等等。
 
 % Through our measurements we gain valuable experience on fake apps from several perspectives, findings like fake samples' naming tendency and fake developers' evasive strategies are inferred.
@@ -55,7 +55,7 @@
 关于用户差评，还有很多的研究空间。
 
 最后，\mytool 框架本身，无论是代码层面还是设计层面，也有值得改善的地方。
-比如是否能利用自动化爬虫框架提高爬虫模块的鲁棒性（对抗应用商店的反爬虫技术、下载稳定性），工具本身的代码优化，还有工具整体的易用性、稳定性等。
+比如是否能结合自动化爬虫框架提高爬虫模块的鲁棒性（对抗应用商店的反爬虫技术、下载稳定性），工具本身的代码优化，还有工具整体的易用性、稳定性等。
 
 总之，从整体上看，本文的工作还有很多可以深化的部分。
 笔者希望本文能抛砖引玉，在让读者对移动应用黑色产业有更多认识的同时，激发读者对仿冒应用等方面的研究兴趣，并从上述几点出发，为后人带来更多深入而完善的相关研究。
