--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -109,8 +109,8 @@ Andow等人曾发表过一篇针对灰色应用的研究文献~\cite{Andow2016AS
 \subsection{应用评论相关研究}
 近年来，除了对Android App本身的分析研究之外，有不少学者也把研究焦点投放在了应用市场的评论上。
 
-Bin Fu等人在2013年发布了WisCom~\cite{fu2013people}——对于某个应用，将其历史评级和评论记录输入WisCom，系统在反馈应用评级变化的同时，也能告诉使用者为什么会受到恶评；
-而Deguang Kong~\cite{kong2015autoreb}等人在2015年发布的AUTOREB则结合了NLP、机器学习技术和声誉系统，先提取用户在某款App的评论中提及到的与安全相关的内容，然后根据每个用户的可信度对该款App是否可能有危险行为进行分数计算，最后用机器学习技术对App进行分类，预测该款App是否会有危险行为。
+Bin Fu等人在2013年发布了WisCom~\cite{fu2013people}---对于某个应用，将其历史评级和评论记录输入WisCom，系统在反馈应用评级变化的同时，也能告诉使用者为什么会受到恶评；
+而Deguang Kong~\cite{kong2015autoreb}等人在2015年发布的AUTOREB则结合了自然语言处理、机器学习技术和声誉系统，先提取用户在某款App的评论中提及到的与安全相关的内容，然后根据每个用户的可信度对该款App是否可能有危险行为进行分数计算，最后用机器学习技术对App进行分类，预测该款App是否会有危险行为。
 
 另一方面，大量的前人工作~\cite{hernandez2019the, xie2014grouptie, zhu2014discovery, hu2019want, chen2017toward, xie2016you, hooi2016fraudar}揭示，很多应用市场都饱受虚假评论的困扰。
 Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\cite{rahman2019art}，在公开确认了这个产业链存在的同时，也揭露了他们的行为模式、生存情况甚至是收入水平等方面的信息。
@@ -123,66 +123,34 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 然而，现有研究提供的知识仍有空缺部分，仿冒应用部分正是缺口之一。
 仿冒应用有什么样的形态？仿冒应用的发展有什么样的趋势？仿冒应用的市场反馈如何？这一环节会与其他黑灰产业环节有关联吗？
 
-为了回答这些疑问，笔者借助犇众信息的移动安全威胁数据平台Janus\footnote{\url{https://www.appscan.io/}}搜集并分析了大量应用样本，从仿冒应用特征解读和仿冒应用评论分析两方面进行了大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
+为了回答这些疑问，笔者与犇众信息的移动安全威胁数据平台Janus\footnote{\url{https://www.appscan.io/}}合作，搜集并分析了大量应用样本，从仿冒应用特征解读和仿冒应用评论分析两方面进行了大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
 仿冒应用特征解读利用数据挖掘分析技巧，利用本研究收集到的仿冒应用数据对仿冒应用进行画像；
 仿冒应用评论分析则通过收集仿冒应用在市场上获得的反馈，验证仿冒应用和排名欺诈行为的关系，进一步地提供了关于仿冒应用生态的信息。
 
 在数据挖掘分析中，研究者通常都会遇到几点挑战：如何确定研究主体、如何收集数据、如何对数据进行有效处理；
-而在评论分析的研究中，如何从评论数据进行挖掘则是研究者经常要思考的问题。
+而在排名欺诈相关研究中，如何从评论数据中有效挖掘排名欺诈行为是研究者经常要思考的问题。
 因此，本实证研究中的难点主要包括如下几点：
 
-1)	如何确定仿冒应用
-
+1)\	\emph{如何确定仿冒应用} \quad
 仿冒应用和正版应用是相对的概念。
 笔者选择了市面上最热门的50个应用，再搜集其对应的仿冒应用样本。
 从应用中筛选出与热门应用外观相似或是相同的样本后，本文使用Android本身自带的证书机制，将获得样本的证书信息与原版应用的证书信息进行比对，从而鉴别出仿冒的样本。
 
-2)	如何获得针对仿冒应用的大量数据
-
+2)\	\emph{如何获得针对仿冒应用的大量数据} \quad
 数据搜集是科研工作中公认的难点。
 本文想要提供一次全面的研究结果，除了搜集的目标应用需要有多样性之外，也必须获得不同应用市场上的数据，增加研究的代表性。
 前文提及犇众信息的移动安全威胁数据平台Janus是一个数据整合平台。该平台每天从各大Android应用市场爬取应用样本入库，免去了要针对各个市场重新定制爬虫代码的麻烦。
 通过设计和实现仿冒应用收集框架\mytool，笔者顺利从Janus搜寻到了超过15万条数据条目作为原始数据，其中每条数据条目代表Janus从应用市场上获得的一个应用样本。
 
-3)	如何对大量的数据进行有效处理
-
+3)\	\emph{如何对大量的数据进行有效处理} \quad
 数据规模和处理效率一直是一对矛盾。
 由于一条数据条目代表一个应用样本，要对超过15万个应用样本进行详尽分析，明显太耗费时间成本与计算成本；然而，如果只对样本进行简单处理，获得的分析结果就不够全面和深入。
-在尽量确保分析全面性的前提下，对于每个样本，本研究只抽取关键信息进行分析，而不对整个应用的代码进行详尽的静态分析或者动态分析，以节省时间与计算成本。
+在尽量确保分析全面性的前提下，对于每个样本，本研究只抽取8个关键信息项进行分析，以节省时间与计算成本。
 
-4)  如何对评论数据分析挖掘
-
-如何从评论数据中挖掘出特征，是评论研究工作的一个难点。
-本文将采用两种不同的方法验证仿冒应用评论是否与排名欺诈相关，两种方法分别从评论内容和用户可信度两个角度对评论进行挖掘。
-如果两种方法结果一致，则可以说明仿冒应用的评论中体现（或不体现）排名欺诈行为；否则，研究者也能在人工复核之后对比出两种方法的性能优劣。
-
-
-\section{论文主要工作内容}
-本文的主要工作如下：
-\begin{itemize}
-	%				\setlength{\itemsep}{-5pt}
-	\setlength{\itemsep}{1pt}
-	\setlength{\parskip}{0pt}
-	\setlength{\parsep}{0pt}
-
-	\item{\bf 进行了首次针对Android仿冒应用的大规模数据搜集：}
-	针对市面上最受欢迎的50款应用，笔者从各个应用市场中收集了超过13万个应用样本数据，再从中筛选出了约5万个仿冒样本，完成了首次针对Android仿冒应用的大规模数据搜集。
-
-	\item{\bf 对工业界中仿冒应用的数据挖掘分析：}
-	在大量工业界数据的支持下，本研究进行了第一次针对Android仿冒应用的数据挖掘分析。
-	其具体从以下三个方面入手：
-	\begin{itemize}
-		\item 仿冒应用的基本特征
-		\item 影响仿冒应用数量的因素
-		\item 仿冒应用的发展轨迹
-	\end{itemize}
-	之后，笔者还从样本信息中对数据手动筛查，获得了几个真实案例。
-	通过对案例的分析，本研究进一步印证了挖掘分析中发现的结果与结论。
-
-	\item {\bf 对仿冒应用评论的分析与验证：}
-	进一步地，本研究从应用评论出发，在试图从市场反应了解用户对仿冒应用的态度以外，也尝试挖掘仿冒应用与排名欺诈（另一种移动黑灰产）之间是否有关联，以深化对仿冒应用生态的了解。
-
-\end{itemize}
+4)\ \emph{如何挖掘评论中的排名欺诈行为} \quad
+现有的排名欺诈挖掘工作均具有其各自的局限性，或是对数据有连续收集要求，或是要求检测者有已知的排名欺诈群体，并不能直接应用到本研究收集的数据中。
+为此，本研究先后设计了基于用户行为可信度和基于评论内容重复度的两个方法。
+前者规避了现有方法的局限性，后者进一步解决了大数据量带来的大运算量问题。
 
 \section{工作概览}
 
@@ -200,7 +168,7 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 针对现有爬虫框架不能定向爬取应用的问题，本研究设计并实现了仿冒应用收集框架\mytool，以进行仿冒应用的数据收集。
 数据收集主要分为两个部分：正版应用信息的收集和仿冒应用的收集。
 在正版应用信息收集的部分，本文选择了50个最热门的App作为目标App，然后手动收集了跟这些App有关的信息；
-仿冒应用信息收集方面，本研究得到了上海犇众信息技术有限公司的帮助，得以通过Janus平台接触从各个应用商店获得的大量的应用样本。
+仿冒应用信息收集方面，本研究利用\mytool，通过Janus平台收集了从各个应用商店获得的大量仿冒应用样本。
 
 2)\ \emph{结合实例分析的仿冒应用特征解读} \quad
 针对移动黑灰产研究中关于仿冒应用的研究空白，本研究收集仿冒应用数据，结合案例分析进行了仿冒应用的特征解读，完成了领域创新。
@@ -208,15 +176,17 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 这些视角分别是仿冒的基本应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，由浅入深解读仿冒应用的生态。
 对应的三个案例分析除了为特征解读提供实例支持之外，还揭示了更多仿冒应用开发者的行为特征。
 
-3)\ \emph{面向仿冒应用的排名欺诈验证创新} \quad
+3)\ \emph{面向仿冒应用的排名欺诈验证方法} \quad
 在这个部分，本文从第三方应用市场中随机选取一部分应用，爬取了用户对它们的所有历史评价，以检测仿冒应用与排名欺诈行为的关联。
-针对现有排名欺诈检测研究的局限性，本研究先后提出了两种创新方法对排名欺诈行为进行排查，均取得了良好的结果。
+针对前人检测研究需要先验知识或特殊数据的问题，本研究从社交媒体研究引入了用户行为可信度进行排查，避开了现有方法的局限性。
+进一步地，本研究从评论内容重复率方面提出了另一创新性排查方法，解决了数据量增大带来的大运算量问题。
+人工复查结果显示，两种排查方法均取得了优于现有方法的结果。
 
 
 \section{本文组织结构}
 本文共分为五章，环绕着本研究的数据搜集、分析过程和分析结果展开，各章节内容如下：
 
-\fullref{chp:intro} 主要提供了本文的研究背景、相关工作、研究意义、主要工作内容和工作概览。
+\fullref{chp:intro} 主要提供了本文的研究背景、相关工作、研究意义和工作概览。
 
 \fullref{chp:background} 介绍了Android应用的构建流程、Android安全证书机制、应用市场与黑灰产业的关系和一些移动黑灰产知识。
 
