--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -42,4 +42,4 @@ This paper completes an innovative study from two aspects, namely fake apps char
 Hopefully, this paper can provide a clear vision toward the fake app and its nature through the data and analysis provided.
 
 % \sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析, 排名欺诈}
-{\sihao{\textbf{\newline Keywords:}}} \textit{Android application, Fake App, Empirical Study, Data Analysis, Ranking Fraud}
+{\sihao{\textbf{\newline Keywords:}}} \textit{Android Application, Fake App, Empirical Study, Data Analysis, Ranking Fraud}
