--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -360,14 +360,14 @@
 	year = {2020},
 	url = {http://m.anjian.com/},
 	citedate = {March 20, 2020},
-	title = {手机按键精灵官网}
+	title = {Anjian}
 }
 
 @online{iapp,
 	year = {2020},
 	url = {http://yougais.com/},
 	citedate = {March 20, 2020},
-	title = {iApp官网}
+	title = {iApp}
 }
 
 @online{burpsuite,
@@ -375,6 +375,20 @@
 	url = {https://portswigger.net/},
 	citedate = {March 21, 2020},
 	title = {Burpsuite}
+}
+
+@online{janus,
+	year = {2020},
+	url = {https://www.appscan.io/},
+	citedate = {March 27, 2020},
+	title = {Janus}
+}
+
+@online{violinplot,
+	year = {2020},
+	url = {https://en.wikipedia.org/wiki/Violin_plot},
+	citedate = {March 27, 2020},
+	title = {Violin plot}
 }
 
 @techreport{McAfee_mobile_thread_report,
@@ -416,7 +430,7 @@
 
 @online{yiguanqianfan,
 	title = {Analysys {Figure}},
-	url = {http://zhishu.analysys.cn/},
+	url = {https://qianfan.analysys.cn/refine/view/rankApp/rankApp.html},
 	citedate = {September 26, 2018}
 }
 
