--- a/edwin_2019/chapter-background.tex
+++ b/edwin_2019/chapter-background.tex
@@ -2,7 +2,7 @@
 \label{chp:background}
 
 随着人们对电子产品的焦点从桌面端慢慢转移到移动端，互联网黑灰产业也有向移动端趋向的迹象。
-本章将按自底向上的顺序，分别介绍Android应用程序、应用市场和移动黑灰产相关的背景知识，以期让读者对移动黑灰产的整体生态有大致的了解。
+本章将按自底向上的顺序，分别介绍Android应用程序\footnote{应用、App在本文中均用以指代Android应用程序，不再区分}、应用市场和移动黑灰产相关的背景知识，以期让读者对移动黑灰产的整体生态有大致的了解。
 
 \section{Android应用程序的构建与签名}
 \label{sec:signature}
