--- a/edwin_2019/chapter-discoveries.tex
+++ b/edwin_2019/chapter-discoveries.tex
@@ -4,7 +4,7 @@
 
 \section{研究概况}
 业界对恶意应用的理解使针对恶意应用的监控得以被实现，但与恶意应用同属移动黑灰产的仿冒应用却仍未被研究过。
-针对业界对仿冒应用了解匮乏的问题，本文利用了数据分析挖掘的方式对收集到的仿冒应用数据进行解读，结合案例分析，进行了领域创新。
+针对业界对仿冒应用了解匮乏的问题，本文利用了数据分析挖掘的方式，结合案例分析，完成了首次基于Android系统仿冒应用的特征解读。
 本研究定义的三个不同视角分别为：\emph{仿冒应用的基本特征}、\emph{影响仿冒应用数量的因素}和\emph{仿冒应用的发展轨迹}。
 
 % \subsection{Fake Sample Characteristics}
@@ -137,7 +137,7 @@
 \end{figure*}
 
 % Fig.~\autoref{fig:Statistic_fake_and_official} is consist of three violin plots,\footnote{\url{https://en.wikipedia.org/wiki/Violin_plot/}} representing our statistics on app names, package names and package sizes, respectively.
-\autoref{fig:Statistic_fake_and_official}由三个小提琴图\footnote{\url{https://en.wikipedia.org/wiki/Violin_plot}}组成，分别表示了本文在应用名、包名和APK包大小上的统计信息。
+\autoref{fig:Statistic_fake_and_official}由三个小提琴图~\cite{violinplot}组成，分别表示了本文在应用名、包名和APK包大小上的统计信息。
 % In each ``violin'', the white dot represents the median, the thick bar in the middle represents the interquartile range while the thin bar represents 95\% confidence interval.
 在每个``小提琴''中，中间的黑色粗条表示四分位数范围，粗条中间的小白点表示数据的中位数，而黑色细条表示95\%置信空间。
 
