--- a/edwin_2019/chapter-fakerevealer.tex
+++ b/edwin_2019/chapter-fakerevealer.tex
@@ -10,7 +10,7 @@
 仿冒应用是一个跟正版应用相对的概念，所以本文需要先定义正版应用，再根据正版应用的信息搜寻仿冒应用。
 
 1)\ \emph{正版应用收集} \quad
-在定义正版应用方面，本研究参考了数据平台易观千帆的月度App排行榜\footnote{\url{https://qianfan.analysys.cn/refine/view/rankApp/rankApp.html}}，然后从中选出了其中的前50款热门App作为本次研究的目标App。
+在定义正版应用方面，本研究参考了数据平台易观千帆的月度App排行榜~\cite{yiguanqianfan}，然后从中选出了其中的前50款热门App作为本次研究的目标App。
 之后，笔者手动地从这50款App的官方网站上下载了这些应用的最新版本，作为正版应用的参考版本。
 
 2)\ \emph{仿冒应用收集} \quad
@@ -61,7 +61,7 @@
 由于Janus平台上已经有提前收集好的源于各个应用市场的App样本，笔者直接从Janus上爬取应用。
 
 不同应用商店提供应用查询、下载的API不同，不存在可以对应所有应用市场的爬虫脚本。
-但只要能分析出应用商店查询、下载API的名称和用法，结合应用商店账户的Cookies，也能从商店中下载应用。
+但只要研究者能分析出某应用商店查询、下载API的名称和用法，结合应用商店账户的Cookies，就能从该商店中下载应用。
 考虑到这个方面，笔者开发了插件化的爬虫模块。
 针对不同的应用商店，使用者可以在使用网络包分析工具（如Burpsuite~\cite{burpsuite}）解析到API与Cookies信息之后，将对应API和Cookies写入配置插件，再对网络爬虫模块配置对应当前商店的插件，开始爬取应用。
 
