--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -83,7 +83,7 @@
 针对重打包检测的前人研究大致可划分为五个类别：
 
 第一类是基于应用\textit{指令序列}的。这种方法使用模糊哈希的方法提取出应用的摘要信息，然后通过比对两两应用之间的摘要信息来获得应用之间的相似度~\cite{DroidMOSS, Zheng2013DroidAnalyticsA}。
-第二类凭借\textit{语义信息}比对应用。如CLANdroid~\cite{CLANdroid}通过分析五种语义特征点（比如代码中的标识符和调用到的AndroidAPI等），检测相似的应用。
+第二类凭借\textit{语义信息}比对应用。如CLANdroid~\cite{CLANdroid}通过分析五种语义特征点（比如代码中的标识符和调用到的Android API等），检测相似的应用。
 第三类利用了\textit{第三方库}进行检测。CodeMatch~\cite{CodeMatch}筛选出应用中使用的第三方库代码后，计算并比对剩余部分代码的哈希值。
 Wukong~\cite{Wukong}也分两步检测重打包应用，但与CodeMatch相比，其第二步使用了基于计数的代码克隆检测手段，而非基于哈希的技术。
 ViewDroid~\cite{ViewDroid}通过重建和比对应用的视图来筛出重打包应用，这种技术属于第四类---\textit{信息可视化}。
@@ -123,7 +123,7 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 然而，现有研究提供的知识仍有空缺部分，仿冒应用部分正是缺口之一。
 仿冒应用有什么样的形态？仿冒应用的发展有什么样的趋势？仿冒应用的市场反馈如何？这一环节会与其他黑灰产业环节有关联吗？
 
-为了回答这些疑问，笔者与犇众信息的移动安全威胁数据平台Janus\footnote{\url{https://www.appscan.io/}}合作，搜集并分析了大量应用样本，从仿冒应用特征解读和仿冒应用评论分析两方面进行了大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
+为了回答这些疑问，笔者与犇众信息的移动安全威胁数据平台Janus~\cite{janus}合作，搜集并分析了大量应用样本，从仿冒应用特征解读和仿冒应用评论分析两方面进行了大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
 仿冒应用特征解读利用数据挖掘分析技巧，利用本研究收集到的仿冒应用数据对仿冒应用进行画像；
 仿冒应用评论分析则通过收集仿冒应用在市场上获得的反馈，验证仿冒应用和排名欺诈行为的关系，进一步地提供了关于仿冒应用生态的信息。
 
@@ -171,9 +171,8 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 仿冒应用信息收集方面，本研究利用\mytool，通过Janus平台收集了从各个应用商店获得的大量仿冒应用样本。
 
 2)\ \emph{结合实例分析的仿冒应用特征解读} \quad
-针对移动黑灰产研究中关于仿冒应用的研究空白，本研究收集仿冒应用数据，结合案例分析进行了仿冒应用的特征解读，完成了领域创新。
-其中，数据解读部分从三个视角完成了一次大规模数据挖掘。
-这些视角分别是仿冒的基本应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，由浅入深解读仿冒应用的生态。
+针对移动黑灰产研究中关于仿冒应用的研究空白，本研究收集仿冒应用数据，结合案例分析，进行了首次基于Android系统仿冒应用的特征解读。
+特征解读从三个视角完成，这些视角分别是仿冒的基本应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，由浅入深揭示仿冒应用的生态。
 对应的三个案例分析除了为特征解读提供实例支持之外，还揭示了更多仿冒应用开发者的行为特征。
 
 3)\ \emph{面向仿冒应用的排名欺诈验证方法} \quad
