--- a/edwin_2019/D3-ACKNOWLEDGEMENT.tex
+++ b/edwin_2019/D3-ACKNOWLEDGEMENT.tex
@@ -2,9 +2,29 @@
 
 \addcontentsline{toc}{chapter}{致  谢}
 
+在师大的时光转瞬而逝。不知不觉，研究生历程已快告一段落，下一个人生阶段也触手可及。
+在就读研究生的三个春秋，鄙人有幸，承蒙了许多前辈的爱护与同侪的关照，借此机会聊表谢意。
 
+首先、也是最想感谢的是我的导师徐立华教授。
+徐老师学风严谨，逻辑清晰，总是会耐心细致地给予学生各方面的指引关怀，更从不吝向学生分享各种资源。
+她给予我的，是学术上的引导，也是人生路上的指点。
+此外，感谢贺樑教授和窦亮老师在本文写作期间给我的指导与建议；感谢犇众信息的唐祝寿老师带我走近业界；感谢凯斯西储大学的肖旭生教授给予我学术访问的机会；也感谢各位曾给我授课或予我关怀的各位老师，你们的言传身教将会成为我宝贵的精神财富。
 
+身边的各位同学也在各方面给了我很大的帮助。
+感谢陈森、范玲玲两位博士带我完成了关于仿冒应用的研究。
+同时，感谢谷林涛、卜文奇、袁宇杰、纪焘、汪庆顺、刘剑、叶莎莎、龚鑫、李雪莲等同学陪伴我一起度过了在华师大的研究生历程。
+还有凯斯西储大学的刘简、杨劭、汪汉林、方鹏程、孙世宇、李昊、孟令萱和戴琪雨同学，半年美国访学之行虽短，但将是我人生其中一段最珍贵的回忆。
 
-\vspace{0.2cm} \hspace{11.5cm}
+我还想感谢多年以来一直支持我的家人和朋友。
+家人的养育之恩自不必说，每每遭遇人生路上的颠簸，都是家里的温暖让我重拾了前进的动力。
+很感谢陈玄同学自高中以来的相伴。千金易得，知己难逢，希望我们友谊的小船能划得更远。
 
-\hspace{10.6cm}  二〇二〇年五月
+最后，感谢看到这里的你。
+
+回首师大求学时光，当真如梦似幻。
+七岁流转，纵有遗憾，但更多的是快乐与美好。
+丽娃河上的点点碎金，樱桃河畔的轻风拂柳，都已深深地刻入我的记忆。
+未来人生路长，愿能铭记``求实创造，为人师表''的格言，勤勤恳恳，不负韶华，更不负诸位照耀过我的光。
+
+\rightline{唐崇斌}
+\rightline{二〇二〇年三月}
