Fix index & format.

--- a/edwin_2019/D2-MYACHIEVEMENTS.tex
+++ b/edwin_2019/D2-MYACHIEVEMENTS.tex
@@ -1,25 +1,8 @@
-
-\fancypagestyle{plain}{%
-	\fancyhead[LE,RO]{华东师范大学硕士专业学位论文}
-	\fancyhead[RE,LO]{ 攻读学位期间发表的学术论文}
-}
-
-
-
+\phantomsection\addcontentsline{toc}{chapter}{攻读学位期间发表的学术论文}
 \chapter*{攻读学位期间发表的学术论文}
-
-
-\addcontentsline{toc}{chapter}{攻读学位期间发表的学术论文}
-
-
-%\vskip 5mm
 
 %{\heiti $\blacksquare$ 已公开发表论文}\vskip 5mm
 
 \begin{enumerate}
-	
 	\item Chongbin Tang, Sen Chen, Lingling Fan, Lihua Xu, Yang Liu, Zhushou Tang, and Liang Dou, ``A large-scale empirical study on industrial fake apps,'' in \textit{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Practice,} IEEE Press, 2019: 183-192. (发表于CCF A类推荐学术会议, 软件工程方向顶级会议ICSE2019)
-	
 \end{enumerate}
-
-
