--- a/edwin_2019/D3-ACKNOWLEDGEMENT.tex
+++ b/edwin_2019/D3-ACKNOWLEDGEMENT.tex
@@ -1,6 +1,6 @@
-\chapter*{ 致\qquad 谢}
+\phantomsection\addcontentsline{toc}{chapter}{致  谢}
 
-\addcontentsline{toc}{chapter}{致  谢}
+\chapter*{致 \quad 谢}
 
 在师大的时光转瞬而逝。不知不觉，研究生历程已快告一段落，下一个人生阶段也触手可及。
 在就读研究生的三个春秋，鄙人有幸，承蒙了许多前辈的爱护与同侪的关照，借此机会聊表谢意。
@@ -12,7 +12,7 @@
 
 身边的各位同学也在各方面给了我很大的帮助。
 感谢陈森、范玲玲两位博士带我完成了关于仿冒应用的研究。
-同时，感谢谷林涛、卜文奇、袁宇杰、纪焘、汪庆顺、刘剑、叶莎莎、龚鑫、李雪莲等同学陪伴我一起度过了在华师大的研究生历程。
+同时，感谢谷林涛、卜文奇、袁宇杰、张雨、纪焘、汪庆顺、刘剑、叶莎莎、龚鑫、李雪莲等同学陪伴我一起度过了在华师大的研究生历程。
 还有凯斯西储大学的刘简、杨劭、汪汉林、方鹏程、孙世宇、李昊、孟令萱和戴琪雨同学，半年美国访学之行虽短，但将是我人生其中一段最珍贵的回忆。
 
 我还想感谢多年以来一直支持我的家人和朋友。
