--- a/edwin_2019/D3-ACKNOWLEDGEMENT-ANONYMOUS.tex
+++ b/edwin_2019/D3-ACKNOWLEDGEMENT-ANONYMOUS.tex
@@ -1,6 +1,7 @@
+\phantomsection\addcontentsline{toc}{chapter}{致  谢}
+
 \chapter*{ 致\qquad 谢}
 
-\addcontentsline{toc}{chapter}{致  谢}
 
 在师大的七年时光转瞬而逝，不知不觉，研究生历程已快要告一段落，我也将迎来下一个人生阶段。
 
