--- a/edwin_2019/D2-MYACHIEVEMENTS.tex
+++ b/edwin_2019/D2-MYACHIEVEMENTS.tex
@@ -1,4 +1,4 @@
-\phantomsection\addcontentsline{toc}{chapter}{攻读学位期间发表的学术论文}
+\phantomsection\addcontentsline{toc}{chapter}{\small{攻读学位期间发表的学术论文}}
 \chapter*{攻读学位期间发表的学术论文}
 
 %{\heiti $\blacksquare$ 已公开发表论文}\vskip 5mm
