--- a/edwin_2019/D3-ACKNOWLEDGEMENT-ANONYMOUS.tex
+++ b/edwin_2019/D3-ACKNOWLEDGEMENT-ANONYMOUS.tex
@@ -1,4 +1,4 @@
-\phantomsection\addcontentsline{toc}{chapter}{致  谢}
+\phantomsection\addcontentsline{toc}{chapter}{\small{致  谢}}
 
 \chapter*{ 致\qquad 谢}
 
