--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -165,12 +165,12 @@
 \newcommand{\Line}[1]{ \textit{ Line .#1}}
 
 % 匿名开关
-% \newcommand{\anonymous}[1]{\phantom{ #1 }}
+\newcommand{\anonymous}[1]{\phantom{ #1 }}
 
 % 查重开关
 % \newcommand{\duplicationCheck}[1]{\phantom{ #1 }}
 
-% 形式审查自带匿名
+% 查重自带匿名
 \ifdefined \duplicationCheck
     \newcommand{\anonymous}[1]{\phantom{ #1 }}
 \fi
@@ -292,6 +292,7 @@
 \input{B2-ABSTRACT-E}
 \clearPaperPage
 
+\phantomsection\addcontentsline{toc}{chapter}{目录}
 \input{B2-TOC}
 \clearPaperPage
 
